force-app/main/default/objects/Color__c/Color__c.object-meta.xml
<CustomObject>
    <label>Color</label>
    <nameField>
        <label>color</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>