force-app/main/default/objects/Color__c/fields/AccountColor__c.field-meta.xml
<CustomField>
    <fullName>AccountColor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Colors</relationshipLabel>
    <relationshipName>Colors</relationshipName>
    <type>Lookup</type>
</CustomField>