force-app/main/default/objects/Color__c/fields/colorCode__c.field-meta.xml
<CustomField>
    <fullName>colorCode__c</fullName>
    <label>Color code</label>
    <length>7</length>
    <required>true</required>
    <type>Text</type>
</CustomField>