force-app/main/default/objects/Color__c/fields/colorDate__c.field-meta.xml
<CustomField>
    <fullName>colorDate__c</fullName>
    <label>colorDate</label>
    <type>DateTime</type>
</CustomField>